Message Section Added to Supervisor And Firebase. Minor changes to Setting Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">InstantGarbageDIsposal</string>
-    <string name="post_an_issue">Post an issue</string>
-    <string name="InstantGarbageDisposal" />
+    <string name="app_name" translatable="false">InstantGarbageDIsposal</string>
+    <string name="post_an_issue" translatable="false">Post an issue</string>
+    <string name="InstantGarbageDisposal" translatable="false" />
     <string-array name="garbage_type">
         <item>Human waste</item>
         <item>Organic waste</item>
@@ -11,25 +11,25 @@
         <item>Wet waste</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="Client_id">1014577373126-sah0blu9khk56j7r4ha8tqa0ainermkq.apps.googleusercontent.com</string>
-    <string name="title_activity_upcoming_events">UpcomingEventsActivity</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="title_activity_login" translatable="false">LoginActivity</string>
+    <string name="prompt_email" translatable="false">Email</string>
+    <string name="prompt_password" translatable="false">Password</string>
+    <string name="action_sign_in" translatable="false">Sign in or register</string>
+    <string name="action_sign_in_short" translatable="false">Sign in</string>
+    <string name="welcome" translatable="false">"Welcome !"</string>
+    <string name="invalid_username" translatable="false">Not a valid username</string>
+    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
+    <string name="login_failed" translatable="false">"Login failed"</string>
+    <string name="Client_id" translatable="false">1014577373126-sah0blu9khk56j7r4ha8tqa0ainermkq.apps.googleusercontent.com</string>
+    <string name="title_activity_upcoming_events" translatable="false">UpcomingEventsActivity</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
+    <string name="next" translatable="false">Next</string>
+    <string name="previous" translatable="false">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_create_event">CreateEventActivity</string>
+    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
+    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_create_event" translatable="false">CreateEventActivity</string>
 </resources>
